examples/test/testpolicy18690.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18690
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key0: value43
      key6: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value45
      podSelector:
        matchLabels:
          key26: value14
          key12: value27
